--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/jquery": "^3.2.12",
+    "angularfire2": "^4.0.0-rc.2",
+    "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "firebase": "^4.3.1",
+    "jquery": "^3.2.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
-    "web3": "^0.18.4"
+    "web3": "^0.18.4",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.3.0",
     "@angular/compiler-cli": "^4.0.0",
+    "@types/bootstrap": "^3.3.36",
     "@types/jasmine": "2.5.53",
     "@types/node": "^8.0.20",
     "babel-cli": "^6.22.2",
