--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "firebase": "^4.3.1",
     "jquery": "^3.2.1",
+    "popper.js": "^1.12.5",
     "rxjs": "^5.1.0",
     "web3": "^0.18.4",
     "zone.js": "^0.8.4"
